# SnippetManager

./: Cargo.toml  README.md  cargo.toml  snippet_manager_state.json  snippets.json
src/: main.rs  storage.rs
src/v0001/: commands.rs  models.rs  v0.0.1
src/v0002/: cargo
