[package]
name = "snippet_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
egui = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
arboard = "3"
fuzzy-matcher = "0.3"
syntect = "5"
rfd = "0.14"